# iei-code

./: .dockerignore  .gitignore  DB_INIT.sql  README.md  database.py  docker-compose.yml  main.py  output.txt  requirements.txt  requirements_final.txt
core/: .dockerignore  DB_INIT.sql  Dockerfile  database.py  main.py  pyproject.toml  requirements.txt
core/data/: __init__.py  localidad_repository.py  monumento_repository.py  provincia_repository.py
core/extractors/: __init__.py  cle_extractor.py  cv_extractor.py  eus_extractor.py
core/models/: __init__.py  models.py
core/searcher/: app.py
core/services/: __init__.py  data_service.py  geo_bot_service.py  wrapper_service.py
core/utils/: logger.py  remove_logs.py
data/: __init__.py  cruds.py  localidad_repository.py  monumento_repository.py  provincia_repository.py
fastapi-search-app/: pyproject.toml  requirements.txt
fastapi-search-app/src/: crud.py  database.py  main.py  models.py  schemas.py
fastapi-search-app/src/routers/: monument.py
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/components/: Checkbox.astro  Map.astro  SearchForm.astro  SearchResults.astro  Select.astro  Welcome.astro
frontend/src/layouts/: Layout.astro
frontend/src/pages/load/: index.astro  script.ts
frontend/src/pages/query/: index.astro
iei-bot/: Dockerfile  app.py  pyproject.toml
models/: models.py
searcher/: main.py  pyproject.toml
services/: __init__.py  data_service.py  geo_api_service.py  geo_bot_service.py
utils/: DeleteDuplicates.ps1  __init__.py  deleteduplicatedatributes.ps1  logger.py
wrapper-cle/: Dockerfile  main.py  pyproject.toml
wrapper-cv/: Dockerfile  main.py  pyproject.toml
wrapper-eus/: Dockerfile  edificios_entrega1_temp.json  main.py  pyproject.toml
wrappers/: __init__.py  cle_extractor.py  cv_extractor.py  eus_extractor.py  wrapper_cle.py
wrappers/data_sources/: Asignados Mañana.docx  edificios2.json
