[tool.poetry]
name = "wrapper-eus"
version = "0.1.0"
description = ""
authors = ["SrIzan <izan.garciag@gmail.com>"]
readme = "README.md"
package-mode = false 

[tool.poetry.dependencies]
python = "^3.12"
pandas = "2.2.3"
fastapi = "0.115.6"
uvicorn = "0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
